# data_porter

./: DAD_MOVE_CHECKLIST.md  README.md  RELEASE_NOTES_0.1.1.md  RUN_DATA_PORTER.bat  RUN_TESTS.bat  VALIDATION_REPORT.md  data_porter_quick.py  pyproject.toml
src/data_porter/: cli.py
src/data_porter/core/: capture.py  known_folders.py  manifest.py  models.py  package.py  report.py  restore.py  safety.py  scanner.py  verify.py
tests/: test_hardening.py  test_pipeline.py  test_restore.py  test_scanner.py
